--- a/app/manifest.yml
+++ b/app/manifest.yml
@@ -6,6 +6,6 @@ applications:
   #build_pack: python_buildpack
   #command: python hello.py
   docker:
-    image: docker200037/demoapp:$BUILD_TAG
+    image: docker200037/demoapp:v13
     username: docker200037
 
